--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,6 +1,18 @@
-{% extends "base.html"}
-{% import "bootstrap/wtf.html" as wtf %}
+{% extends "main/base.html" %}
+{% block navbar_right %}
+<ul class="nav navbar-nav navbar-right">
+	{% if current_user.is_authenticated %}
+	<li><a href="{{ url_for('auth.logout') }}">sign out</a></li>
+	{% else %}
+	<li><a href="{{ url_for('auth.login') }}">sign in</a></li>
+	{% endif %}
+</ul>
+{% endblock %}
 
 {% block page_content %}
-	{{ wtf.quick_form(form) }}
+	{% if current_user.is_authenticated %}
+	hello, {{ user.username }}
+	{% else %}
+	hello,stranger
+	{% endif %}
 {% endblock %}
