--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -19,8 +19,14 @@
 			<ul class="nav navbar-nav">
 				<li><a href="/">Home</a></li>
 			</ul>
-			{% block navbar_right %}
-			{% endblock %}
+			<ul class="nav navbar-nav navbar-right">
+				{% if current_user.is_authenticated %}
+				<li><a href="{{ url_for('auth.change_password') }}">change password</a></li>
+				<li><a href="{{ url_for('auth.logout') }}">sign out</a></li>
+				{% else %}
+				<li><a href="{{ url_for('auth.login') }}">sign in</a></li>
+				{% endif %}
+			</ul>
 		</div>
 	</div>
 </div>
