next time is chapter 11

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -10,9 +10,5 @@
 </div>
 {% endblock %}
 {% block page_content %}
-	{% if current_user.is_authenticated %}
-	hello, {{ user.username }}
-	{% else %}
-	hello,stranger
-	{% endif %}
+Welcome, Administrator!
 {% endblock %}
