--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -21,6 +21,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				{% if current_user.is_authenticated %}
+				<li><a href="{{ url_for('auth.reset_email') }}">reset email address</a></li>
 				<li><a href="{{ url_for('auth.change_password') }}">change password</a></li>
 				<li><a href="{{ url_for('auth.logout') }}">sign out</a></li>
 				{% else %}
