--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -1,7 +1,7 @@
 {% extends "bootstrap/base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 {% block title %}Flasky{% endblock %}
-
+{{ moment.include_moment() }}
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
 	<div class="container">
@@ -21,6 +21,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				{% if current_user.is_authenticated %}
+				<li><a href="{{ url_for('main.mypost') }}">post a article</a></li>
 				<li><a href="{{ url_for('main.user', username=current_user.username) }}">profile</a></li>
 				<li><a href="{{ url_for('auth.reset_email') }}">reset email address</a></li>
 				<li><a href="{{ url_for('auth.change_password') }}">change password</a></li>
@@ -41,6 +42,14 @@
 		{% endblock %}
 		{% block page_content %}
 		{% endblock %}
+		{% block post %}
+		{% endblock %}
 	</div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{{ moment.include_moment() }}
+{{ pagedown.include_pagedown() }}
 {% endblock %}
